upgrading to java 17 and spring boot 3.0.4